# OpenCLWindowJava

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  settings.gradle
include/: OpenClWindowJava.h  de_linusdev_nat_openclwindow_OpenCLWindowJava.h  nat_GPUBuffer.h  nat_OpenCLWindowJava.h
src/main/cpp/: OpenClWindowJava.cpp  de_linusdev_nat_openclwindow_OpenCLWindowJava.cpp  nat_GPUBuffer.cpp  nat_OpenCLWindowJava.cpp
src/main/java/de/linusdev/: Main.java  Utils.java
src/main/java/de/linusdev/nat/: GLFWValues.java  Modifiers.java
src/main/java/de/linusdev/nat/buffer/: BufferUtils.java
src/main/java/de/linusdev/nat/loader/: LibraryLoader.java
src/main/java/de/linusdev/nat/openclwindow/: OpenCLWindowJava.java
src/main/java/de/linusdev/nat/structs/: CameraStruct.java  ComplexStructure.java  Sizeable.java  Structure.java  StructureInfo.java
src/main/java/de/linusdev/nat/types/: Float1.java  Float2.java  Float3.java  Float4.java  FloatN.java  IntN.java
src/main/java/de/linusdev/openclwindow/: FrameInfo.java  OpenCLException.java  Utils.java
src/main/java/de/linusdev/openclwindow/buffer/: AutoUpdateGPUBuffer.java  BufferAccess.java  BufferUtils.java  HasGPUBuffer.java
src/main/java/de/linusdev/openclwindow/enums/: CLMemoryFlags.java  GLFWValues.java  (+2 more)
src/main/resources/: render.cl
src/main/resources/native-libraries/: OpenCLWindow.lib  OpenCLWindowJava.jnilib  libOpenCLWindowJava.jnilib
src/test/cpp/: main.cpp
src/test/resources/: render.cl
src/test/resources/native-libraries/: glad.lib  glfw3.lib  libOpenCLWindowJava.jnilib
(+31 files in other folders)
